--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,19 +3,19 @@ spring.application.name=DevLens
 spring.config.import=optional:file:.env[.properties]
 
 # Server Settings
-server.port=${SERVER_PORT}
-spring.main.web-application-type=${SPRING_MAIN_WEB_APPLICATION_TYPE}
-spring.main.banner-mode=${SPRING_MAIN_BANNER_MODE}
+server.port=8443
+spring.main.web-application-type=servlet
+spring.main.banner-mode=off
 
 # DataSource Settings
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
 # JPA Settings
-spring.jpa.hibernate.ddl-auto=${SPRING_JPA_HIBERNATE_DDL_AUTO}
-spring.jpa.generate-ddl=${SPRING_JPA_GENERATE_DDL}
-spring.jpa.show-sql=${SPRING_JPA_SHOW_SQL}
-spring.jpa.properties.hibernate.format_sql=${SPRING_JPA_PROPERTIES_HIBERNATE_FORMAT_SQL}
-spring.jpa.database-platform=${SPRING_JPA_DATABASE_PLATFORM}
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.generate-ddl=true
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=false
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
