--- a/.github/workflows/build_test.yml
+++ b/.github/workflows/build_test.yml
@@ -2,21 +2,18 @@ name: Java CI with Gradle
 
 on:
   push:
-    branches: [ "dev", "main" ] # 메인에 푸시되면
+    branches: [ "dev", "main" ]
   pull_request:
-    branches: [ "dev", "main" ] # 메인에 PR되면
+    branches: [ "dev", "main" ]
 
 jobs:
-  build: # 첫 번째 작업
-    ### 테스트용 mysql
+  build:
     runs-on: ubuntu-latest
     services:
       mysql:
         image: mysql:8.0
-        #mysql 설정
         env:
-          # MYSQL_USER : 지정하지 않은경우 root
-          MYSQL_ROOT_PASSWORD: 12345678 # 비밀번호
+          MYSQL_ROOT_PASSWORD: 12345678
           MYSQL_DATABASE: actions_test
         ports:
           - 3306:3306
@@ -26,71 +23,62 @@ jobs:
       SPRING_DATASOURCE_URL: jdbc:mysql://localhost:3306/actions_test
       SPRING_DATASOURCE_USERNAME: root
       SPRING_DATASOURCE_PASSWORD: 12345678
-      SPRING_JWT_SECRET: ${{secrets.SPRING_JWT_SECRET}}
-      AWS_S3_BUCKET: ${{secrets.AWS_S3_BUCKET}}
-      AWS_STACK_AUTO: ${{secrets.AWS_STACK_AUTO}}
-      AWS_REGION: ${{secrets.AWS_REGION}}
-      AWS_ACCESS_KEY: ${{secrets.AWS_ACCESS_KEY}}
-      AWS_SECRET_KEY: ${{secrets.AWS_SECRET_KEY}}
+      SPRING_JWT_SECRET: ${{ secrets.SPRING_JWT_SECRET }}
+      AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
+      AWS_STACK_AUTO: ${{ secrets.AWS_STACK_AUTO }}
+      AWS_REGION: ${{ secrets.AWS_REGION }}
+      AWS_ACCESS_KEY: ${{ secrets.AWS_ACCESS_KEY }}
+      AWS_SECRET_KEY: ${{ secrets.AWS_SECRET_KEY }}
+
     permissions:
-      pull-requests: write  # PR에 댓글, 체크 실행을 할 수 있는 권한
-      checks: write          # 체크 결과를 기록할 권한
-      actions: read          # GitHub Actions의 정보를 읽을 수 있는 권한
+      pull-requests: write
+      checks: write
+      actions: read
 
     steps:
-      - uses: actions/checkout@v4 # actions/checkout의 버전이 v4, 깃허브 액션 실행 환경으로 복사
+      # 1. Checkout Repository
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      - name: Cache Docker layers
+      # 2. Gradle Cache Restoration
+      - name: Restore Gradle cache
         uses: actions/cache@v3
         with:
-          path: /tmp/.docker-layers
-          key: ${{ runner.os }}-docker-${{ github.sha }}
+          path: ~/.gradle/caches/modules-2/files-2.1
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
           restore-keys: |
-            ${{ runner.os }}-docker-
+            gradle-${{ runner.os }}-
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Pull MySQL Image
-        run: docker pull mysql:5.7
-
+      # 3. JDK Setup
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
-      # Gradle Wrapper로 빌드 실행
-      - name: Build with Gradle Wrapper
-        run: ./gradlew clean build
+      # 4. Build and Test with Gradle
+      - name: Build and Test
+        run: |
+          ./gradlew clean build --no-daemon
+          ./gradlew test --no-daemon
 
-      # Gradle 설정 및 의존성 캐싱
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
+      # 5. Gradle Cache Save
+      - name: Save Gradle cache
+        uses: actions/cache@v3
+        with:
+          path: ~/.gradle/caches/modules-2/files-2.1
+          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            gradle-${{ runner.os }}-
 
-      - name: Build with Gradle Wrapper
-        run: ./gradlew build
-
-      - name: Run tests # 테스트 실행
-        run: ./gradlew test
-
-      - name: Upload Test Results # 테스트 결과 보고
+      # 6. Upload Test Results
+      - name: Upload Test Results
         uses: actions/upload-artifact@v4
         with:
           name: test-results
           path: build/reports/tests/test
 
-      - name: Cache Gradle dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.gradle/caches
-          key: gradle-${{ runner.os }}-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
-          restore-keys: |
-            gradle-${{ runner.os }}-
-
-
-  dependency-submission: # 두 번째 작업
-
+  dependency-submission:
     runs-on: ubuntu-latest
     permissions:
       contents: write
@@ -102,8 +90,5 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
-
-      # Generates and submits a dependency graph, enabling Dependabot Alerts for all project dependencies.
-      # See: https://github.com/gradle/actions/blob/main/dependency-submission/README.md
       - name: Generate and submit dependency graph
-        uses: gradle/actions/dependency-submission@af1da67850ed9a4cedd57bfd976089dd991e2582 # v4.0.0
+        uses: gradle/actions/dependency-submission@v4
