--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,10 @@ plugins {
     id 'java'
     id 'org.springframework.boot' version '3.4.1'
     id 'io.spring.dependency-management' version '1.1.7'
-    id("org.sonarqube") version "6.0.1.5171"
+    id "org.sonarqube" version "3.5.0.2730"
 }
+
+
 
 group = 'com.seveneleven'
 version = '0.0.1-SNAPSHOT'
