Setting : 액추에이터, 프로메테우스 의존성 설정 추가
- 화이트 리스트에 Actuator 경로 추가

--- a/Admin/build.gradle
+++ b/Admin/build.gradle
@@ -29,6 +29,12 @@ repositories {
 
 dependencies {
     implementation project(':Common')
+
+    //모니터링
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'// actuator
+    implementation 'io.micrometer:micrometer-core'//마이크로미터
+    implementation 'io.micrometer:micrometer-registry-prometheus'//프로메테우스
+
 }
 
 test {
