--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -53,3 +53,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # Multipart Setting
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
