--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=DevLens-Main
 spring.config.import=optional:file:.env[.properties]
 
 # Server Settings
-server.port=8443
+server.port=8444
 spring.main.web-application-type=servlet
 spring.main.banner-mode=off
 
@@ -49,6 +49,11 @@ spring.mail.default.encoding=UTF-8
 
 # Request Json Key Valid on/off
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
 
 # Multipart Setting
 spring.servlet.multipart.max-file-size=50MB
