--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -50,6 +50,11 @@ spring.mail.default.encoding=UTF-8
 # Request Json Key Valid on/off
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
+
+
 # Multipart Setting
 spring.servlet.multipart.max-file-size=50MB
 spring.servlet.multipart.max-request-size=500MB
