--- a/Common/build.gradle
+++ b/Common/build.gradle
@@ -33,6 +33,12 @@ dependencies {
     implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
+    //모니터링
+    implementation 'org.springframework.boot:spring-boot-starter-actuator'// actuator
+    implementation 'io.micrometer:micrometer-core'//마이크로미터
+    implementation 'io.micrometer:micrometer-registry-prometheus'//프로메테우스
+
 }
 
 tasks.named('test') {
