--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -49,3 +49,7 @@ spring.mail.default.encoding=UTF-8
 
 # Request Json Key Valid on/off
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+# Actuator
+management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
