Chore : 모듈 메인클래스 이름 명시
- 모듈의 실행 클래스가 이름이 전부 `Main`이라서 혼동됨

--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=DevLens-Main
+spring.application.name=DevLens-AdminApplication
 
 spring.config.import=optional:file:.env[.properties]
 
