--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=DevLens-Main
+spring.application.name=DevLens-MainApplication
 
 spring.config.import=optional:file:.env[.properties]
 
