--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -13,6 +13,8 @@ spring.datasource.url=${SPRING_DATASOURCE_URL}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
 
+spring.datasource.hikari.max-lifetime=${SPRING_DATASOURCE_HIKARI_MAX_LIFE_TIME}
+
 # JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.generate-ddl=true
