--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -67,3 +67,5 @@ management.endpoint.health.show-details=always
 
 # ?? ?? (?? ?? = dev, ?? ?? = prod)
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+
+spring.main.allow-bean-definition-overriding=true
