--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -66,3 +66,5 @@ spring.servlet.multipart.max-request-size=500MB
 
 # ?? ?? (?? ?? = dev, ?? ?? = prod)
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
+
+spring.main.allow-bean-definition-overriding=true
