Setting : 스웨거 프록시 설정 추가

--- a/Admin/src/main/resources/application.properties
+++ b/Admin/src/main/resources/application.properties
@@ -69,3 +69,12 @@ management.endpoint.health.show-details=always
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 spring.main.allow-bean-definition-overriding=true
+
+springdoc.api-docs.path=/admin/api-docs/
+springdoc.swagger-ui.url=/admin/api-docs/
+springdoc.swagger-ui.config-url=/admin/api-docs/swagger-config
+springdoc.swagger-ui.path=/admin/swagger-ui.html
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.static-path-pattern=/static/**
+server.forward-headers-strategy=FRAMEWORK
