--- a/Main/src/main/resources/application.properties
+++ b/Main/src/main/resources/application.properties
@@ -68,3 +68,12 @@ spring.servlet.multipart.max-request-size=500MB
 spring.profiles.active=${SPRING_PROFILES_ACTIVE}
 
 spring.main.allow-bean-definition-overriding=true
+
+springdoc.api-docs.path=/main/api-docs/
+springdoc.swagger-ui.url=/main/api-docs/
+springdoc.swagger-ui.config-url=/main/api-docs/swagger-config
+springdoc.swagger-ui.path=/main/swagger-ui.html
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+spring.mvc.static-path-pattern=/static/**
+server.forward-headers-strategy=FRAMEWORK
